--- a/src/app/_routes/route-main/route-main.component.html
+++ b/src/app/_routes/route-main/route-main.component.html
@@ -1,24 +1,21 @@
 <div class="relative vhbox h(100vh) clip user-select-none">
   <app-header></app-header>
-  <div class="hbox w(100%) h(100%)">
-    <app-sidebar class="h(100%)"></app-sidebar>
-    <div class="pack w(calc(100vw-270px)) h(100%) scroll">
-      <div class="bg(blue) w(1000) h(100%) p(40)">
-        <div class="vbox">
-          <div
-            class="width(100%) h(300) bg(orange) mt(50) pack bold font(40) r(20) pointer"
-          >
-            배너
-          </div>
-          <div class="hbox space-around gap(20) width(100%) h(100%) mt(50)">
-            <div class="w(400) h(400) bg(gray)">콘텐츠</div>
-            <div class="w(400) h(400) bg(gray)">콘텐츠</div>
-          </div>
-          <div class="width(100%) h(300) bg(orange) mt(50) pack bold font(40)">
-            다른 배너
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="vbox h(100%) w(100%) bg(black) scroll"> 
+    <ng-template #content></ng-template>
   </div>
 </div>
+
+
+
+     <!-- 아래 화살표 모양 -->
+
+      <!-- <svg width="23" height="14" viewBox="0 0 23 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M22.213 1.6066L11.6064 12.2132L0.999844 1.6066" stroke="#ACACAC" stroke-width="2"/>
+        </svg> -->
+        
+    
+ <!-- search icon -->
+ <!-- <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <circle cx="13.5192" cy="13.5192" r="12.0192" stroke="#ACACAC" stroke-width="3"/>
+  <line x1="20.9835" y1="21.7084" x2="35.2143" y2="35.9392" stroke="#ACACAC" stroke-width="3"/>
+</svg> -->
